Pequeños ajustes en los archivos de configuración y navegación principal

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,9 +1,9 @@
 {
   "menu": {
     "options": {
-      "film": "Películas",
+      "films": "Películas",
       "actors": "Actores",
-      "companies": "Compañias"
+      "companies": "Compañías"
     }
   }
 }
