Creado el servicio para recoger el parámetro de id de película y mostrar el dato en el header de fimls details page

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -5,5 +5,8 @@
       "actors": "Actores",
       "companies": "Compañías"
     }
+  },
+  "loader": {
+    "waitMessage": "Cargando. Por favor, espere."
   }
 }
